--- a/403.html
+++ b/403.html
@@ -137,6 +137,281 @@
 				]
 			}
 		</script>
+		<style>
+			html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  					margin: 0;
+				  	padding: 0;
+				  	border: 0;
+				  	font-size: 100%;
+				  	font: inherit;
+				  	vertical-align: baseline;
+				  }
+
+				  article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+				  	display: block;
+				  }
+
+				  body {
+				  	line-height: 1;
+				  }
+
+				  ol, ul {
+				  	list-style: none;
+				  }
+
+				  blockquote, q {
+				  	quotes: none;
+				  }
+
+				  blockquote:before, blockquote:after, q:before, q:after {
+				  	content: '';
+				  	content: none;
+				  }
+
+				  table {
+				  	border-collapse: collapse;
+				  	border-spacing: 0;
+				  }
+
+				* {
+					margin: 0;
+				}
+
+				html {
+					height: 100%;
+					font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+					font-weight: 400;
+					font-size: 16pt;
+					line-height: 1.5em;
+					margin: 0;
+					padding: 0;
+					border: 0;
+					vertical-align: baseline;
+					background-color: transparent;
+				}
+
+				body {
+				  	color: #515151;
+				  	background-color: #fff;
+				  	-webkit-text-size-adjust: 100%;
+				  	-ms-text-size-adjust: 100%
+				}
+
+				a[class] {
+				  	color: #fff;
+				}
+
+				a {
+				  	padding-bottom: 5px;
+				  	color: #e84f01;
+				  	background: linear-gradient(0deg, currentcolor, currentcolor) bottom center no-repeat;
+				  	background-size: 0px 3px;
+				  	transition: 0.5s;
+				  	text-decoration: none;
+				}
+
+				a:hover {
+				  	background-size: 100% 3px;
+				}
+
+				h1, h2, h3, h4, h5, h6 {
+				  	font-weight: bold;
+				  	color: #313131;
+				  	text-rendering: optimizeLegibility;
+				}
+
+				p {
+				  	line-height: 1.25rem;
+			      	margin-top: 0.5em;
+			      	margin-bottom: 1rem;
+			      	font-size: 14pt;
+			      	font-weight: 300;
+				}
+
+				strong {
+				    color: #303030;
+				    font-weight: bold;
+				}
+
+				em {
+					font-style: italic;
+				}
+
+				.small {
+				  font-size: 11.5pt;
+				}
+
+				.center {
+					text-align: center;
+					margin-left: auto;
+					margin-right: auto;
+				}
+
+				img {
+					max-width: 100%;
+					height: auto;
+					margin: 0 auto;
+				}
+
+				section {
+					max-width: 600pt;
+					padding: 0 20pt 0 20pt;
+					margin: 0 auto 0 auto;
+				}
+
+				section:first-of-type {
+					padding-top: 40pt;
+				}
+
+				section:last-of-type {
+					padding-bottom: 40pt;
+				}
+
+				article {
+					margin: 20pt 0;
+				}
+
+				/* Social Icons */
+
+				.social {
+				    margin-top: 0.5em;
+				    font-weight: 300;
+				    width: 40px;
+				    height: 40px;
+				    background-size: 40px 40px;
+				    background-position: center center;
+				    background-repeat: no-repeat;
+				    display: inline-block;
+				    padding-right: 10px;
+				}
+
+				.social > div {
+				    margin: 0 auto;
+				}
+
+				article.social-icons {
+				    margin-top: -10px;
+				    text-align: center;
+				}
+
+				a.no-bar {
+				    background-size: 0% 0px;
+				}
+
+				.facebook {
+				    background-image: url(../images/social/facebook.svg);
+				}
+
+				.github {
+				    background-image: url(../images/social/github.svg);
+				}
+
+				.google {
+				    background-image: url(../images/social/google.svg);
+				}
+
+				.instagram {
+				    background-image: url(../images/social/instagram.svg);
+				}
+
+				.linkedin {
+				    background-image: url(../images/social/linkedin.svg);
+				}
+
+				.snapchat {
+				    background-image: url(../images/social/snapchat.svg);
+				}
+
+				.soundcloud {
+				    background-image: url(../images/social/soundcloud.svg);
+				}
+
+				.email {
+				    background-image: url(../images/social/telegram.svg);
+				}
+
+				.twitter {
+				    background-image: url(../images/social/twitter.svg);
+				}
+
+				.four-oh-three {
+				    background-image: url(../images/403.svg);
+				    padding: 0;
+				    background-position: center center;
+				    width: 400px;
+				    height: 400px;
+				    background-size: 400px 400px;
+				    background-repeat: no-repeat;
+				    content: '';
+				    -webkit-animation: flippityFlip 6s infinite;
+				    animation: flippityFlip 6s infinite;
+				}
+
+				.four-oh-four {
+				    background-image: url(../images/404.svg);
+				    padding: 0;
+				    background-position: center center;
+				    width: 400px;
+				    height: 400px;
+				    background-size: 400px 400px;
+				    background-repeat: no-repeat;
+				    content: '';
+				    -webkit-animation: flippityFlip 6s infinite;
+				    animation: flippityFlip 6s infinite;
+				}
+
+				.hero {
+				    font-size: 120pt;
+				    font-weight: 500;
+				    color: #000000;
+				}
+
+				.sub-hero {
+				    font-size: 24pt;
+				    font-weight: 300;
+				    color: #000000;
+				    padding-bottom: 40px;
+				}
+
+				.signature {
+					background-image: url(../images/signature.png);
+					height: 350px;
+					width: 344px;
+					padding: 0;
+					background-position: center center;
+					background-size: 350px 344px;
+					background-repeat: no-repeat;
+					margin-top: 50px;
+					margin-bottom: 20px;
+					opacity: 1;
+					animation-name: fadeInOpacity;
+					animation-iteration-count: 1;
+					animation-timing-function: ease-in;
+					animation-duration: 1s;
+				}
+
+				@-webkit-keyframes flippityFlip {  
+				  0% {
+				    -webkit-transform: rotateX(0deg); 
+				    -webkit-transform-origin: 0% 50% 0;
+				  }  
+				  100% {
+				    -webkit-transform: rotateX(360deg); 
+				    -webkit-transform-origin: 0% 50% 0;
+				  }  
+				}
+
+				@keyframes flippityFlip {  
+				  0% {
+				    transform: rotateX(0deg); 
+				    transform-origin: 0% 50% 0;
+				  }  
+				  100% {
+				    transform: rotateX(360deg);
+				    transform-origin: 0% 50% 0;
+				  }  
+				}
+		</style>
 	</head>
 	<body>
 		<section id="403">
