Added internal CSS to remaining error html pages

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 		<script type="text/javascript" src="assets/js/typed.min.js"></script>
 
+		<script type="text/javascript" src="assets/js/shawn.schwartz.js"></script>
+		
+
 		<!-- Google Analytics -->
 		<script>
 			(function(s,h,a,w,n,i,e){s['GoogleAnalyticsObject']=n;s[n]=s[n]||function(){
