Fixed asset references for error pages

--- a/403.html
+++ b/403.html
@@ -299,43 +299,43 @@
 				}
 
 				.facebook {
-				    background-image: url(../images/social/facebook.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/facebook.svg);
 				}
 
 				.github {
-				    background-image: url(../images/social/github.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/github.svg);
 				}
 
 				.google {
-				    background-image: url(../images/social/google.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/google.svg);
 				}
 
 				.instagram {
-				    background-image: url(../images/social/instagram.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/instagram.svg);
 				}
 
 				.linkedin {
-				    background-image: url(../images/social/linkedin.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/linkedin.svg);
 				}
 
 				.snapchat {
-				    background-image: url(../images/social/snapchat.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/snapchat.svg);
 				}
 
 				.soundcloud {
-				    background-image: url(../images/social/soundcloud.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/soundcloud.svg);
 				}
 
 				.email {
-				    background-image: url(../images/social/telegram.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/telegram.svg);
 				}
 
 				.twitter {
-				    background-image: url(../images/social/twitter.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/twitter.svg);
 				}
 
 				.four-oh-three {
-				    background-image: url(../images/403.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/403.svg);
 				    padding: 0;
 				    background-position: center center;
 				    width: 400px;
@@ -348,7 +348,7 @@
 				}
 
 				.four-oh-four {
-				    background-image: url(../images/404.svg);
+				    background-image: url(https://shawntylerschwartz.com/assets/images/404.svg);
 				    padding: 0;
 				    background-position: center center;
 				    width: 400px;
@@ -374,7 +374,7 @@
 				}
 
 				.signature {
-					background-image: url(../images/signature.png);
+					background-image: url(https://shawntylerschwartz.com/assets/images/signature.png);
 					height: 350px;
 					width: 344px;
 					padding: 0;
