--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 		<meta name="msapplication-TileImage" content="assets/images/app-icons/ms-icon-144x144.png">
 
 		<!-- JavaScript -->
-		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/typed.min.js"></script>
 
 		<!-- Google Analytics -->
