Testing side bar menu

--- a/index.html
+++ b/index.html
@@ -356,6 +356,6 @@
 			</article>
 		</section>
 
-		<script type="text/javascript" src="https://shawntylerschwartz.com/assets/js/shawn.schwartz.js"></script>
+		<script type="text/javascript" src="assets/js/shawn.schwartz.js"></script>
 	</body>
 </html>
