Resolved https routing issues for prev jQuery version

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 		<meta name="msapplication-TileImage" content="assets/images/app-icons/ms-icon-144x144.png">
 
 		<!-- JavaScript -->
-		<!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 		<script type="text/javascript" src="assets/js/typed.min.js"></script>
 
 		<!-- Google Analytics -->
-		<script>
+		<!-- <script>
 			(function(s,h,a,w,n,i,e){s['GoogleAnalyticsObject']=n;s[n]=s[n]||function(){
 				(s[n].q=s[n].q||[]).push(arguments)},s[n].l=1*new Date();i=h.createElement(a),
 				e=h.getElementsByTagName(a)[0];i.async=1;i.src=w;e.parentNode.insertBefore(i,e)
@@ -74,15 +74,15 @@
 
 			ga('create', 'UA-81858219-1', 'auto');
 			ga('send', 'pageview');
-		</script>
-		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81858219-1"></script>
+		</script> -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81858219-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
 		  gtag('config', 'UA-81858219-1');
-		</script> -->
+		</script>
 
 		<!-- Structured Data for SEO -->
 		<script type="application/ld+json">
