Updated meta index follow for appropriate pages +  dir

--- a/500.html
+++ b/500.html
@@ -7,10 +7,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="theme-color" content="#e84f01">
-		<meta name="robots" content="index, follow">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-		<meta name="description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
-		<meta name="keywords" content="shawn schwartz, shawn tyler schwartz, shawn, tyler, schwartz, ucla, asucla, cognitive psychology, thesis, undergraduate, research assistant, evolutionary, medicine, biology, ucla health, fpg, full stack, web developer, software, developer, designer, swift, html, css, javascript, matlab, ios, app, appstore, iphone">
 
 		<title>500 - Internal Service Error</title>
 
