Added cv and fixed other dependencies

--- a/500.html
+++ b/500.html
@@ -12,29 +12,7 @@
 
 		<title>500 - Internal Service Error</title>
 
-		<!-- Google+ Content -->
-		<meta itemprop="name" content="I'm Shawn Schwartz">
-		<meta itemprop="image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
-		<meta itemprop="description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
-
-		<!-- Google+ Open Graph -->
-		<meta property="og:title" content="I'm Shawn Schwartz">
-		<meta property="og:image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
-		<meta property="og:description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
-
-		<!-- Twitter Card -->
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@shawnshawn97">
-		<meta name="twitter:creator" content="@shawnshawn97">
-		<meta name="twitter:title" content="I'm Shawn Schwartz">
-		<meta name="twitter:description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
-		<meta name="twitter:image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
-		<meta name="twitter:domain" content="shawntylerschwartz.com">
-
 		<!-- DNS Prefetching -->
-		<link rel="dns-prefetch" href="//platform.twitter.com">
-		<link rel="dns-prefetch" href="//p.twitter.com">
-		<link rel="dns-prefetch" href="//cdn.api.twitter.com">
 		<link rel="dns-prefetch" href="//www.google-analytics.com">
 
 		<!-- Web App Icons -->
@@ -55,83 +33,16 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="assets/images/app-icons/ms-icon-144x144.png">
 
-		<!-- JavaScript -->
-		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-		<script type="text/javascript" src="assets/js/typed.min.js"></script>
-
 		<!-- Google Analytics -->
-		<script>
-			(function(s,h,a,w,n,i,e){s['GoogleAnalyticsObject']=n;s[n]=s[n]||function(){
-				(s[n].q=s[n].q||[]).push(arguments)},s[n].l=1*new Date();i=h.createElement(a),
-				e=h.getElementsByTagName(a)[0];i.async=1;i.src=w;e.parentNode.insertBefore(i,e)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-81858219-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81858219-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81858219-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
 		  gtag('config', 'UA-81858219-1');
-		</script> -->
-
-		<!-- Structured Data for SEO -->
-		<script type="application/ld+json">
-			{
-				"@context": "http://schema.org",
-				"@graph":[
-					{
-						"@type": "Person",
-						"name": "Shawn Schwartz",
-						"email": "mailto:shawnschwartz@ucla.edu",
-						"url": "https://shawntylerschwartz.com/",
-						"sameAs": [
-							"https://www.linkedin.com/in/shawntylerschwartz",
-							"https://instagram.com/shawnshawn97",
-							"https://twitter.com/shawnshawn97",
-							"https://www.facebook.com/shawn.schwartz101"
-						],
-						"image": {
-							"@type": "ImageObject",
-							"contentUrl": "https://shawntylerschwartz.com/assets/images/avatar.jpg",
-							"encodingFormat": "jpg",
-							"width": {
-								"@type": "QuantitativeValue",
-								"value": "1702"
-							},
-							"height": {
-								"@type": "QuantitativeValue",
-								"value": "1702"
-							},
-							"name": "Shawn Schwartz",
-							"author": "Shawn Schwartz",
-							"contentLocation": "Los Angeles, California"
-						},
-						"address": {
-							"@type": "PostalAddress",
-							"addressLocality": "Los Angeles, California"
-						},
-						"worksFor": {
-							"@type": "EducationalOrganization",
-							"name": "Associated Students UCLA (ASUCLA)",
-							"url": "http://asucla.ucla.edu"
-						},
-						"jobTitle": "Lead Student Web Developer/Technical Assistant",
-						"studentOf": {
-							"@type": "EducationalOrganization",
-							"name": "UCLA",
-							"degree": "Cognitive Science, B.S., Biology, B.S.",
-							"degreeSpecialization": "Specialization in Computing",
-							"honors": "Undergraduate Departmental Highest Honors Thesis Student"
-						}
-
-					}
-				]
-			}
 		</script>
+
 		<style>
 			html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   					margin: 0;
