Updated width css to rid mobile responsive overhang of divs

--- a/500.html
+++ b/500.html
@@ -267,9 +267,10 @@
 				}
 
 				.hero {
-				    font-size: 120pt;
+				    font-size: 75pt;
 				    font-weight: 500;
 				    color: #000000;
+				    /*width: 300px;*/
 				}
 
 				.sub-hero {
@@ -322,7 +323,7 @@
 	<body>
 		<section id="500">
 			<article>
-				<div class="hero center">500<br />Internal Service Error</div>
+				<div class="hero center">500<br />Internal<br />Service<br />Error</div>
 				<br />
 				<div class="sub-hero center">It's not you, it's me.</div>
 			</article>
