--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
 				<h1>Websites</h1>
 				<p>I've developed some really cool stuff for some really cool people. Check out some of my work below.</p>
 				<div class="websitelogosWrapper">
-					<div class="websiteLogos asucla midLogoAlign"></div> <div class="websiteLogos uclaAthletics"></div> <div class="websiteLogos uclaLicensing midLogoAlign"></div> <div class="websiteLogos uclaStore"></div>
+					<div class="websiteLogos asucla midLogoAlign logoCenter"></div> <div class="websiteLogos uclaAthletics logoCenter"></div> <div class="websiteLogos uclaLicensing midLogoAlign logoCenter"></div> <div class="websiteLogos uclaStore midLogoAlign logoCenter"></div>
 				</div>
 				<div class="websitelogosWrapper">
-					<div class="websiteLogos uclaHealth"></div> <div class="websiteLogos languageBird midLogoAlign"></div> <div class="websiteLogos kidzDentalCare"></div>
+					<div class="websiteLogos uclaHealth logoCenter"></div> <div class="websiteLogos languageBird midLogoAlign logoCenter"></div> <div class="websiteLogos kidzDentalCare logoCenter"></div>
 				</div>
 				<div class="website"><a href="http://asucla.ucla.edu" target="_blank">asucla.ucla.edu</a><p><em>Redesigned Entire Site for ASUCLA in 2016 &amp; Currently Maintains</em><br />(January 2016 &mdash; Present)</p></div>
 				<div class="website"><a href="https://uclastore.com" target="_blank">uclastore.com</a><p><em>Design Consultant for 2018 Redesign &amp; Currently Maintains</em><br />(January 2018 &mdash; Present)</p></div>
