Adjust GitHub Repo descriptions

--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
 					</div>
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/UCLA-Ackerman-Slideshow" target="_blank">UCLA-Ackerman-Slideshow</a>
-						<div class="repoDesc">UCLA Ackerman Student Union Level 1 SS</div>
+						<div class="repoDesc">UCLA Ackerman Union Level 1</div>
 						<div class="repoLangDot repoJS"><span class="repoLang">JavaScript</span></div>
 					</div>
 				</div>
 				<div class="repoRowWrap">
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/Shawn-Schwartz-CV-RESUME" target="_blank">Shawn-Schwartz-CV-RESUME</a>
-						<div class="repoDesc">LaTeX version of my Curriculum Vitae (CV)</div>
+						<div class="repoDesc">LaTeX version of my Curriculum Vitae</div>
 						<div class="repoLangDot repoTeX"><span class="repoLang">TeX</span></div>
 					</div>
 					<div class="repo">
@@ -295,36 +295,36 @@
 				<div class="repoRowWrap">
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/ASUCLA-Fluid" target="_blank">ASUCLA-Fluid</a>
-						<div class="repoDesc">Responsive Email Template for ASUCLA</div>
+						<div class="repoDesc">Responsive Email Tmpt for ASUCLA</div>
 						<div class="repoLangDot repoHTML"><span class="repoLang">HTML</span></div>
 					</div>
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/Psych121-Interactive-Learning" target="_blank">Psych121-Interactive-Learning</a>
-						<div class="repoDesc">UCLA Psych Exp Testing Interactive LMs</div>
+						<div class="repoDesc">UCLA Psych Expt. Interactive LMs</div>
 						<div class="repoLangDot repoJS"><span class="repoLang">JavaScript</span></div>
 					</div>
 				</div>
 				<div class="repoRowWrap">
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/RB-CAS-EXP-UCLA" target="_blank">RB-CAS-EXP-UCLA</a>
-						<div class="repoDesc">UCLA Psych 100B Expt. Code - Fall 2017</div>
+						<div class="repoDesc">UCLA Psych 100B Expt. Code - Fall 17</div>
 						<div class="repoLangDot repoPHP"><span class="repoLang">PHP</span></div>
 					</div>
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/PTB-Bricks" target="_blank">PTB-Bricks</a>
-						<div class="repoDesc">Bricks Breaking game for UCLA Psych 20B</div>
+						<div class="repoDesc">Bricks Breaking Game UCLA Psych 20B</div>
 						<div class="repoLangDot repoMATLAB"><span class="repoLang">Matlab</span></div>
 					</div>
 				</div>
 				<div class="repoRowWrap">
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/UCLA-Psych20-3DConnect4" target="_blank">UCLA-Psych20-3DConnect4</a>
-						<div class="repoDesc">Final Project for UCLA Psych 20 - 2017</div>
+						<div class="repoDesc">Final Project for UCLA Psych 20</div>
 						<div class="repoLangDot repoMATLAB"><span class="repoLang">Matlab</span></div>
 					</div>
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/H20-Interactions-ScienceFair-2013" target="_blank">H20-Interactions-SciFair-2013</a>
-						<div class="repoDesc">2013 LA County Science Fair 1st Place</div>
+						<div class="repoDesc">LA County Science Fair 1st Place</div>
 						<div class="repoLangDot repoJAVA"><span class="repoLang">JAVA</span></div>
 					</div>
 				</div>
