Repo spacing resolved

--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
 				<div class="repoRowWrap">
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/RB-CAS-EXP-UCLA" target="_blank">RB-CAS-EXP-UCLA</a>
-						<div class="repoDesc">UCLA Psych 100B Expt. Code - Fall 17</div>
+						<div class="repoDesc">UCLA Psych 100B Expt. Code Fall 17</div>
 						<div class="repoLangDot repoPHP"><span class="repoLang">PHP</span></div>
 					</div>
 					<div class="repo">
 						<a href="https://github.com/ShawnTylerSchwartz/PTB-Bricks" target="_blank">PTB-Bricks</a>
-						<div class="repoDesc">Bricks Breaking Game UCLA Psych 20B</div>
+						<div class="repoDesc">Bricks Breaking UCLA Psych 20B</div>
 						<div class="repoLangDot repoMATLAB"><span class="repoLang">Matlab</span></div>
 					</div>
 				</div>
