Update 500.html media queries

--- a/500.html
+++ b/500.html
@@ -273,6 +273,12 @@
 				    /*width: 300px;*/
 				}
 
+				@media (max-width: 38em) {
+					.hero {
+						font-size: 65pt;
+					}
+				}
+
 				.sub-hero {
 				    font-size: 24pt;
 				    font-weight: 300;
