--- a/500.html
+++ b/500.html
@@ -273,12 +273,6 @@
 				    /*width: 300px;*/
 				}
 
-				@media (max-width: 38em) {
-					.hero {
-						font-size: 65pt;
-					}
-				}
-
 				.sub-hero {
 				    font-size: 24pt;
 				    font-weight: 300;
@@ -323,6 +317,26 @@
 				    transform: rotateX(360deg);
 				    transform-origin: 0% 50% 0;
 				  }  
+				}
+
+				@media (max-width: 38em) {
+				  .social {
+				    width: 35px;
+				    height: 35px;
+				    background-size: 35px 35px;
+				  }
+				}
+
+				@media (max-width: 34em) {
+				  .social {
+				    width: 30px;
+				    height: 30px;
+				    background-size: 30px 30px;
+				  }
+
+				  .hero {
+					font-size: 65pt;
+				  }
 				}
 		</style>
 	</head>
