--- a/404.html
+++ b/404.html
@@ -304,6 +304,22 @@
 				    transform-origin: 0% 50% 0;
 				  }  
 				}
+
+				@media (max-width: 38em) {
+				  .social {
+				    width: 35px;
+				    height: 35px;
+				    background-size: 35px 35px;
+				  }
+				}
+
+				@media (max-width: 34em) {
+				  .social {
+				    width: 30px;
+				    height: 30px;
+				    background-size: 30px 30px;
+				  }
+				}
 		</style>
 	</head>
 	<body>
