New design and serve images in webp format

--- a/500.html
+++ b/500.html
@@ -16,22 +16,13 @@
 		<link rel="dns-prefetch" href="//www.google-analytics.com">
 
 		<!-- Web App Icons -->
-		<link rel="apple-touch-icon" sizes="57x57" href="assets/images/app-icons/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="assets/images/app-icons/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/app-icons/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="assets/images/app-icons/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/app-icons/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="assets/images/app-icons/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="assets/images/app-icons/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="assets/images/app-icons/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="assets/images/app-icons/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="assets/images/app-icons/android-icon-192x192.png">
+		<!-- Web App Icons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/images/app-icons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/images/app-icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="assets/images/app-icons/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="assets/images/app-icons/favicon-16x16.png">
-		<link rel="manifest" href="assets/images/app-icons/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="assets/images/app-icons/ms-icon-144x144.png">
+		<link rel="manifest" href="assets/images/app-icons/site.webmanifest">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 
 		<!-- Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81858219-1"></script>
@@ -109,7 +100,7 @@
 
 				a {
 				  	padding-bottom: 5px;
-				  	color: #e84f01;
+				  	color: #ff0042;
 				  	background: linear-gradient(0deg, currentcolor, currentcolor) bottom center no-repeat;
 				  	background-size: 0px 3px;
 				  	transition: 0.5s;
@@ -240,6 +231,14 @@
 				    background-image: url(https://shawntylerschwartz.com/assets/images/social/twitter.svg);
 				}
 
+				.cv {
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/cv.svg);
+				}
+
+				.orcid {
+				    background-image: url(https://shawntylerschwartz.com/assets/images/social/orcid.svg);
+				}
+
 				.four-oh-three {
 				    background-image: url(https://shawntylerschwartz.com/assets/images/403.svg);
 				    padding: 0;
@@ -350,17 +349,19 @@
 		</section>
 
 		<section id="footer">
-			<article>
+			<article id="signature">
 				<div class="signature center"></div>
-				<p class="center">&copy; Shawn Tyler Schwartz, 2018.<br />All Rights Reserved.</p>
+				<p class="center">&copy; Shawn Tyler Schwartz, 2019.<br />All Rights Reserved.</p>
 			</article>
 			<article class="social-icons">
 				<a href="https://www.facebook.com/shawn.schwartz101" class="no-bar" target="_blank" alt="Facebook" title="Facebook"><div class="social facebook"></div></a>
-				<a href="https://twitter.com/shawnshawn97" class="no-bar" target="_blank" alt="Twitter" title="Twitter"><div class="social twitter"></div></a>
+				<a href="https://twitter.com/shawnschwartz_" class="no-bar" target="_blank" alt="Twitter" title="Twitter"><div class="social twitter"></div></a>
 				<a href="https://github.com/ShawnTylerSchwartz" class="no-bar" target="_blank" alt="Github" title="Github"><div class="social github"></div></a>
 				<a href="mailto:shawnschwartz@ucla.edu" class="no-bar" target="_blank" alt="Email" title="Email"><div class="social email"></div></a>
-				<a href="https://instagram.com/shawnshawn97" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a>
+				<a href="https://instagram.com/shawnschwartz_" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a>
 				<a href="https://www.linkedin.com/in/ShawnTylerSchwartz/" class="no-bar" target="_blank" alt="LinkedIn" title="LinkedIn"><div class="social linkedin"></div></a>
+				<a href="cv/" class="no-bar" target="_blank" alt="Curriculum Vitae" title="Curriculum Vitae"><div class="social cv"></div></a>
+				<a href="https://orcid.org/0000-0001-6444-8451" class="no-bar" target="_blank" alt="ORCID" title="ORCID"><div class="social orcid"></div></a>
 			</article>
 		</section>
 	</body>
