--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 		<!-- Google+ Content -->
 		<meta itemprop="name" content="I'm Shawn Schwartz">
-		<meta itemprop="image" content="https://shawntylerschwartz.com/assets/images/avatar.webp">
+		<meta itemprop="image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
 		<meta itemprop="description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
 
 		<!-- Google+ Open Graph -->
 		<meta property="og:title" content="I'm Shawn Schwartz">
-		<meta property="og:image" content="https://shawntylerschwartz.com/assets/images/avatar.webp">
+		<meta property="og:image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
 		<meta property="og:description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
 
 		<!-- Twitter Card -->
@@ -30,7 +30,7 @@
 		<meta name="twitter:creator" content="@shawnshawn97">
 		<meta name="twitter:title" content="I'm Shawn Schwartz">
 		<meta name="twitter:description" content="I'm Shawn Schwartz, a UCLA Undergraduate Thesis Student in Cognitive Science, B.S. and Biology, B.S., Full-Stack Software Developer, and Designer. I've been coding since 2009 and have developed websites and software for ASUCLA and UCLA Health. I fluently code in 14+ languages.">
-		<meta name="twitter:image" content="https://shawntylerschwartz.com/assets/images/avatar.webp">
+		<meta name="twitter:image" content="https://shawntylerschwartz.com/assets/images/avatar.jpg">
 		<meta name="twitter:domain" content="shawntylerschwartz.com">
 
 		<!-- Stylesheets -->
@@ -82,7 +82,7 @@
 						],
 						"image": {
 							"@type": "ImageObject",
-							"contentUrl": "https://shawntylerschwartz.com/assets/images/avatar.webp",
+							"contentUrl": "https://shawntylerschwartz.com/assets/images/avatar.jpg",
 							"encodingFormat": "jpg",
 							"width": {
 								"@type": "QuantitativeValue",
