Temp refitting of social icons for now

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
 		<section id="about">
 			<article class="social-icons">
-				<a href="https://www.facebook.com/shawn.schwartz101" class="no-bar" target="_blank" alt="Facebook" title="Facebook"><div class="social facebook"></div></a>
+				<!-- <a href="https://www.facebook.com/shawn.schwartz101" class="no-bar" target="_blank" alt="Facebook" title="Facebook"><div class="social facebook"></div></a> -->
 				<a href="https://twitter.com/shawnschwartz_" class="no-bar" target="_blank" alt="Twitter" title="Twitter"><div class="social twitter"></div></a>
 				<a href="https://github.com/ShawnTylerSchwartz" class="no-bar" target="_blank" alt="Github" title="Github"><div class="social github"></div></a>
 				<a href="mailto:shawnschwartz@ucla.edu" class="no-bar" target="_blank" alt="Email" title="Email"><div class="social email"></div></a>
-				<a href="https://instagram.com/shawnschwartz_" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a>
+				<!-- <a href="https://instagram.com/shawnschwartz_" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a> -->
 				<a href="https://www.linkedin.com/in/ShawnTylerSchwartz/" class="no-bar" target="_blank" alt="LinkedIn" title="LinkedIn"><div class="social linkedin"></div></a>
 				<a href="cv/" class="no-bar" target="_blank" alt="Curriculum Vitae" title="Curriculum Vitae"><div class="social cv"></div></a>
 				<a href="https://orcid.org/0000-0001-6444-8451" class="no-bar" target="_blank" alt="ORCID" title="ORCID"><div class="social orcid"></div></a>
@@ -354,11 +354,11 @@
 				<p class="center">&copy; Shawn Tyler Schwartz, 2019.<br />All Rights Reserved.</p>
 			</article>
 			<article class="social-icons">
-				<a href="https://www.facebook.com/shawn.schwartz101" class="no-bar" target="_blank" alt="Facebook" title="Facebook"><div class="social facebook"></div></a>
+				<!-- <a href="https://www.facebook.com/shawn.schwartz101" class="no-bar" target="_blank" alt="Facebook" title="Facebook"><div class="social facebook"></div></a> -->
 				<a href="https://twitter.com/shawnschwartz_" class="no-bar" target="_blank" alt="Twitter" title="Twitter"><div class="social twitter"></div></a>
 				<a href="https://github.com/ShawnTylerSchwartz" class="no-bar" target="_blank" alt="Github" title="Github"><div class="social github"></div></a>
 				<a href="mailto:shawnschwartz@ucla.edu" class="no-bar" target="_blank" alt="Email" title="Email"><div class="social email"></div></a>
-				<a href="https://instagram.com/shawnschwartz_" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a>
+				<!-- <a href="https://instagram.com/shawnschwartz_" class="no-bar" target="_blank" alt="Instagram" title="Instagram"><div class="social instagram"></div></a> -->
 				<a href="https://www.linkedin.com/in/ShawnTylerSchwartz/" class="no-bar" target="_blank" alt="LinkedIn" title="LinkedIn"><div class="social linkedin"></div></a>
 				<a href="cv/" class="no-bar" target="_blank" alt="Curriculum Vitae" title="Curriculum Vitae"><div class="social cv"></div></a>
 				<a href="https://orcid.org/0000-0001-6444-8451" class="no-bar" target="_blank" alt="ORCID" title="ORCID"><div class="social orcid"></div></a>
