New scholar asset and updated htaccess expiresactive no css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<meta name="twitter:domain" content="shawntylerschwartz.com">
 
 		<!-- Stylesheets -->
-		<link href="assets/css/style_shawn.css" rel="stylesheet">
+		<link href="assets/css/shawn.css" rel="stylesheet">
 
 		<!-- DNS Prefetching -->
 		<link rel="dns-prefetch" href="//platform.twitter.com">
@@ -163,6 +163,7 @@
 				<a href="https://www.linkedin.com/in/ShawnTylerSchwartz/" class="no-bar" target="_blank" alt="LinkedIn" title="LinkedIn"><div class="social linkedin"></div></a>
 				<a href="cv/" class="no-bar" target="_blank" alt="Curriculum Vitae" title="Curriculum Vitae"><div class="social cv"></div></a>
 				<a href="https://orcid.org/0000-0001-6444-8451" class="no-bar" target="_blank" alt="ORCID" title="ORCID"><div class="social orcid"></div></a>
+				<a href="https://scholar.google.com/citations?user=5HlFRxwAAAAJ" class="no-bar" target="_blank" alt="Google Scholar" title="Google Scholar"><div class="social scholar"></div></a>
 			</article>
 			<article class="about">
 				<h1>About Me</h1>
@@ -362,6 +363,7 @@
 				<a href="https://www.linkedin.com/in/ShawnTylerSchwartz/" class="no-bar" target="_blank" alt="LinkedIn" title="LinkedIn"><div class="social linkedin"></div></a>
 				<a href="cv/" class="no-bar" target="_blank" alt="Curriculum Vitae" title="Curriculum Vitae"><div class="social cv"></div></a>
 				<a href="https://orcid.org/0000-0001-6444-8451" class="no-bar" target="_blank" alt="ORCID" title="ORCID"><div class="social orcid"></div></a>
+				<a href="https://scholar.google.com/citations?user=5HlFRxwAAAAJ" class="no-bar" target="_blank" alt="Google Scholar" title="Google Scholar"><div class="social scholar"></div></a>
 			</article>
 		</section>
 
